<resources>
    <string name="app_name">Simply For Reddit</string>

    <!-- Toast that appears when the refresh icon in the widget is clicked -->
    <string name="refresh_toast">Refreshing list</string>

    <!-- Snackbar action to refresh page -->
    <string name="snackbar_retry">Try again</string>

    <!-- Text for a button that shows all of the comments -->
    <string name="see_all_button">See all</string>

    <!-- Text displayed when no comments were found -->
    <string name="comments_empty">No comments.</string>

    <!-- Text and labels used in the widget -->
    <string name="widget_label">Hot on Reddit</string>
    <string name="widget_empty_list">No posts found.</string>

    <!-- Status messages for retrieving posts or comments -->
    <string name="status_no_internet">No internet connection</string>
    <string name="status_no_posts">Unable to retrieve posts</string>
    <string name="status_no_comments">Unable to retrieve comments</string>
    <string name="status_server_error">Unable to reach server</string>

    <!-- Menu items -->
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_policy">Privacy Policy</string>

    <!-- Share a URL of a reddit post when the share action is clicked -->
    <string name="share_format">Hey! Check this Reddit post out:\n%1$s</string>

    <!-- Prefixes for subreddits, usernames and creation time -->
    <string name="prefix_subreddit" translatable="false">r/%1$s</string>
    <string name="prefix_user">Posted by u/%1$s</string>
    <string name="prefix_user_short" translatable="false">u/%1$s</string>
    <string name="prefix_time" translatable="false">- %1$s</string>

    <!-- Content descriptions for accessibility -->
    <string name="a11y_thumbnail">Post thumbnail</string>
    <string name="a11y_image">Post image</string>
    <string name="a11y_play_icon">Video play icon</string>
    <string name="a11y_placeholder">Image loading animation</string>
    <string name="a11y_score_icon">Post score icon</string>
    <string name="a11y_refresh_widget">Refresh widget list</string>
    <string name="a11y_arrow_up">Score icon</string>
    <string name="a11y_logo">App logo</string>

    <!-- Tools text used for development purposes only -->
    <string name="tools_title">Ice cave in Iceland during sunset</string>
    <string name="tools_subreddit">r/pics</string>
    <string name="tools_time_and_author">Posted by u/IcyDreams 3 hours ago</string>
    <string name="tools_time">3 hours ago</string>
    <string name="tools_score">1265</string>
    <string name="tools_comment_time">2 hours ago</string>
    <string name="tools_comment_author">Madeline_Albright6</string>
    <string name="tools_url">i.imgur.com/tKdsaEd.jpg</string>
    <string name="tools_body">There is mass transfer from Earth to Mars due to asteroid
        impacts. We could find life that has been there for billions of years and we still could not
        be sure it did not come form Earth originally.</string>

    <!-- Publicly accessible url for the Privacy Policy for this app -->
    <string translatable="false" name="policy_url">
        http://andarb.com/policy/privacy_policy.html</string>
</resources>
