<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="66dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/post_thumbnail_iv"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:contentDescription="@string/a11y_thumbnail"
            android:scaleType="centerCrop" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/post_title_tv"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="14sp"
            tools:text="@string/tools_title" />

        <TextView
            android:id="@+id/post_subreddit_tv"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/post_title_tv"
            android:layout_below="@id/post_title_tv"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            tools:text="@string/tools_subreddit" />

        <TextView
            android:id="@+id/post_time_tv"
            android:textColor="#7f7f7f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_title_tv"
            android:layout_toEndOf="@id/post_subreddit_tv"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            tools:text="@string/tools_time" />
    </RelativeLayout>

    <TextView
        android:id="@+id/post_upvote_count_tv"
        android:textColor="@android:color/black"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        tools:text="@string/tools_score" />

</LinearLayout>