<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/post_thumbnail_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/a11y_thumbnail" />

    <TextView
        android:id="@+id/post_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tools_title" />

    <TextView
        android:id="@+id/post_subreddit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/post_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/post_title_tv"
        tools:text="@string/tools_subreddit" />

    <TextView
        android:id="@+id/post_time_and_author_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/post_subreddit_tv"
        app:layout_constraintTop_toTopOf="@+id/post_subreddit_tv"
        tools:text="@string/tools_time_and_author" />

    <TextView
        android:id="@+id/post_upvote_count_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/post_subreddit_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_title_tv"
        tools:text="@string/tools_upvote_count" />

</android.support.constraint.ConstraintLayout>