<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corners">

    <RelativeLayout
        android:id="@+id/widget_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/logo"
            android:src="@mipmap/ic_launcher_round"
            android:layout_marginStart="@dimen/widget_margin"
            android:contentDescription="@string/a11y_logo"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/logo"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/widget_label"
            android:textAllCaps="true"
            android:textColor="@color/colorTextWidgetTitle"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/widget_refresh_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/widget_margin"
            android:contentDescription="@string/a11y_refresh_widget"
            android:src="@drawable/refresh_icon_24" />

    </RelativeLayout>

    <ListView
        android:id="@+id/widget_post_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_header"
        android:layout_marginEnd="@dimen/widget_margin"
        android:layout_marginStart="@dimen/widget_margin" />

    <TextView
        android:id="@+id/widget_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/widget_header"
        android:layout_marginEnd="@dimen/widget_margin"
        android:layout_marginStart="@dimen/widget_margin"
        android:gravity="center"
        android:text="@string/widget_empty_list"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>