<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/comment_author_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tools_comment_author" />

    <TextView
        android:id="@+id/comment_score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/comment_author_tv"
        app:layout_constraintStart_toEndOf="@+id/comment_author_tv"
        app:layout_constraintTop_toTopOf="@+id/comment_author_tv"
        tools:text="@string/tools_score" />

    <TextView
        android:id="@+id/comment_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/comment_author_tv"
        app:layout_constraintStart_toEndOf="@+id/comment_score_tv"
        app:layout_constraintTop_toTopOf="@+id/comment_author_tv"
        tools:text="@string/tools_comment_time" />

    <TextView
        android:id="@+id/comment_body_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/comment_author_tv"
        app:layout_constraintTop_toBottomOf="@+id/comment_author_tv"
        tools:text="@string/tools_comment_body" />

</android.support.constraint.ConstraintLayout>